--- a/src/components/ItemDetailContainer/ItemDetailContainer.module.css
+++ b/src/components/ItemDetailContainer/ItemDetailContainer.module.css
@@ -1,8 +1,11 @@
 
 .detailContainer{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    height: 92.5vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
+.detailContainerDM{
+    background-color: black;
+}
