--- a/src/components/ItemCount/ItemCount.module.css
+++ b/src/components/ItemCount/ItemCount.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: space-between;
     border: 2px solid #D3D3D3;
-    padding: 0 10px;
+    padding: 10px;
     margin-top: 10px;
 }
 
@@ -22,10 +22,11 @@
     width: 100%;
     border: none;
     background-color: #D3D3D3;
-    padding: 5px;
+    padding: 15px;
     font-weight: bold;
     border-radius: 5px;
     transition: all .3s;
+    font-size: 20px;
 }
 
 .addCartBtn:hover{
