--- a/src/components/ItemDetailContainer/ItemDetailContainer.module.css
+++ b/src/components/ItemDetailContainer/ItemDetailContainer.module.css
@@ -1,11 +1,13 @@
 
 .detailContainer{
-    height: 92.5vh;
+    padding: 20px 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 90vh;
+    max-height: 100%;
 }
 
 .detailContainerDM{
-    background-color: black;
+    background-color: #010409;
 }
