--- a/src/components/ItemDetail/ItemDetail.module.css
+++ b/src/components/ItemDetail/ItemDetail.module.css
@@ -73,6 +73,26 @@
     margin: 0px 0;
 }
 
+.finalizarCompraBtn{
+    margin-top: 10px;
+    width: 100%;
+    border: none;
+    background-color: #D3D3D3;
+    padding: 15px;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: all .3s;
+    font-size: 20px;
+    display: block;
+    text-align: center;
+    color: black;
+}
+
+.finalizarCompraBtn:hover{
+    cursor: pointer;
+    background-color: #8f8f8f;
+}
+
 /* Dark Mode */
 
 .detailDM .detailTitle,
@@ -94,4 +114,13 @@
 
 .detailDM .detailLeft{
     border-color: #0D1117;
+}
+
+.detailDM .finalizarCompraBtn{
+    background-color: #07090c;
+    color: white;
+}
+
+.detailDM .finalizarCompraBtn:hover{
+    background-color: #020203;
 }
