--- a/src/components/ProfileWidget/ProfileWidget.module.css
+++ b/src/components/ProfileWidget/ProfileWidget.module.css
@@ -33,3 +33,10 @@
 .userNameNavBarDM{
     color: white;
 }
+
+.dropdownItem{
+    display: block;
+    color: black;
+    background-color: white;
+    width: 100%;
+}
