--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,9 +1,12 @@
 .footer{
-    height: 150px;
     width: 100%;
     background-color: #F6F8FA;
     padding: 20px;
-    
+    height: 25vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 
